--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,13 @@
         <item name="android:layout_height">40.0dp</item>
     </style>
 
+    <style name="RecyclerView" parent="Widget.AppCompat.ListView">
+        <item name="android:background">@android:color/holo_blue_light</item>
+        <item name="android:requiresFadingEdge">vertical</item>
+        <item name="android:fadingEdgeLength">10dp</item>
+        <item name="android:scrollbars">vertical</item>
+    </style>
+
     <style name="Theme.Appasyncrv.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
